mobile responsive and alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -11535,11 +11535,11 @@ a.button.border,
 a.button {
   background-color: rgb(102, 103, 107);
   top: 0px;
-  padding: 6px 18px;
+  padding: 8px 18px;
   color: rgb(255, 255, 255);
   position: relative;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   display: inline-block;
   transition: all 0.2s ease-in-out 0s;
   cursor: pointer;
